<resources>
    <string name="app_name">Paladins: Companion of the Realm</string>
    <string name="email_me">paladins.companion@gmail.com</string>
    <string name="shared_pref_file">PALADINS_COMPANION</string>
    <string name="base_url">http://api.paladins.com/paladinsapi.svc/</string>

    <string name="api_status_on">API Status: OK</string>
    <string name="api_status_off">API Status: OFF</string>
    <string name="api_maintenance">API is down or under maintenance.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search a player...</string>

    <string name="wins">WINS</string>
    <string name="losses">LOSSES</string>
    <string name="winrate">WINRATE</string>
    <string name="my_stats">MY STATISTICS</string>
    <string name="my_achievements">MY ACHIEVEMENTS</string>
    <string name="pager_summary">Summary</string>
    <string name="pager_ranks">Ranks</string>
    <string name="pager_history">History</string>
    <string name="history_players">History of player searched</string>
    <string name="no_player_found">No players found</string>
    <string name="summary">Summary</string>
    <string name="match_history">Match history</string>
    <string name="search_player">Search a player</string>
    <string name="loading">Loading</string>
    <string name="champions">Champions</string>
    <string name="get_player">Loading player...</string>
    <string name="items">Items</string>

    <string name="nav_champions">Champions</string>
    <string name="nav_player">Player</string>
    <string name="nav_feedback">Send Feedback</string>
    <string name="nav_about">About</string>
</resources>
