<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_champions"
            android:icon="@drawable/ic_action_champion"
            android:title="@string/nav_champions" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_player" />
    </group>

    <group android:id="@+id/group_2"
        android:checkableBehavior="single">
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_feedback" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about" />
    </group>
</menu>
